# classroom-optimizer

./: .gitignore  Dockerfile  README.md  __init__.py  catalog-info.yaml  pyproject.toml
.github/workflows/: ci-cd.yml
agents/: __init__.py  agent.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
tools/: __init__.py  optimizer_tools.py
